--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=18.7.0"
   },
   "scripts": {
-    "check:typings": "tsc --declarationDir ts-output",
+    "check:typings": "tsc",
     "generate:doc": "typedoc src",
     "profile:webpack": "webpack --profile --json=compilation-stats.json --config config/webpack.prod.js",
     "lint": "eslint src",
@@ -54,8 +54,10 @@
     "@babel/preset-typescript": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "babel-loader": "^8.2.5",
