--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "mini-css-extract-plugin": "^2.6.1",
     "sass-loader": "^13.0.2",
     "terser-webpack-plugin": "^5.3.3",
