--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "build/index.html",
+  "engines": {
+    "node": ">=16.x",
+    "npm": ">=7.x"
+  },
   "scripts": {
     "check:typings": "tsc",
     "generate:doc": "typedoc src",
