--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: actions/setup-node@v3
           with:
-            node-version: ${{ matrix.node-version }}
+            node-version: '16.10.0'
 
       - name: Install dependencies
           run: npm ci
