--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -1,5 +1,10 @@
 name: my-job-portal-ui
-on: [pull_request, workflow_dispatch]
+on:
+  pull_request:
+    branches: [master]
+
+  workflow_dispatch:
+
 default:
 jobs:
   build:
