--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -10,9 +10,8 @@ jobs:
     name: Build
     strategy:
       fail-fast: true
-      matrix:
-        node-version: [ '16.10.0' ]
     runs-on: macos-latest
+
     steps:
       - name: Checkout repository
       - uses: actions/checkout@v3
@@ -20,7 +19,7 @@ jobs:
       - name: Download binary
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '16.10.0'
 
       - name: Install dependencies
         run: npm ci
@@ -41,6 +40,7 @@ jobs:
     name: Test
     needs: build
     runs-on: macos-latest
+
     steps:
       - name: Unit Test
         run: |
