--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -10,8 +10,9 @@ jobs:
     name: Build
     strategy:
       fail-fast: true
+      matrix:
+        node-version: [ '16.10.0' ]
     runs-on: macos-latest
-
     steps:
       - name: Checkout repository
       - uses: actions/checkout@v3
@@ -40,7 +41,6 @@ jobs:
     name: Test
     needs: build
     runs-on: macos-latest
-
     steps:
       - name: Unit Test
         run: |
