--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -13,14 +13,15 @@ jobs:
       matrix:
         node-version: [ '16.10.0' ]
     runs-on: macos-latest
+
     steps:
       - name: Checkout repository
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Download binary
-      - uses: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
-          node-version: '16.10.0'
+          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: npm ci
@@ -41,6 +42,7 @@ jobs:
     name: Test
     needs: build
     runs-on: macos-latest
+
     steps:
       - name: Unit Test
         run: |
