--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -1,87 +1,87 @@
-name: ci
-on: [push, workflow_dispatch]
-
-jobs:
-  setup:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v2
-
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: '12'
-
-      - name: Cache node_modules
-        id: cache-node-modules
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('package-lock.json') }}
-
-      - name: Install dependencies
-        run: npm install
-
-  test_mysql:
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v2
-
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: '12'
-
-      - name: Restore node_modules
-        id: cache-node-modules
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('package-lock.json') }}
-
-      - name: Test MySQL 5
-        run: npm run test-mysql
-        env:
-          DOCKER_MYSQL_TAG: 5
-
-      - name: Test MySQL 8
-        run: npm run test-mysql
-        env:
-          DOCKER_MYSQL_TAG: 8
-
-
-  publish:
-    runs-on: ubuntu-latest
-    needs: [test_mysql, test_postgres, test_mariadb, test_mssql, test_sqlite]
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v2
-
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: '12'
-
-      - name: Restore node_modules
-        id: cache-node-modules
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('package-lock.json') }}
-
-      - name: Build
-        run: npm run build
-
-      - name: Check version changes
-        uses: EndBug/version-check@v1
-        id: check
-
-      - name: Publish
-        if: steps.check.outputs.changed == 'true' && github.ref == 'refs/heads/master'
-        run: |
-          npm set registry "https://registry.npmjs.org"
-          npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_PUBLISH_TOKEN }}
-          npm publish
+#name: ci
+#on: [push, workflow_dispatch]
+#
+#jobs:
+#  setup:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Check out repository code
+#        uses: actions/checkout@v2
+#
+#      - name: Setup node
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: '12'
+#
+#      - name: Cache node_modules
+#        id: cache-node-modules
+#        uses: actions/cache@v2
+#        with:
+#          path: node_modules
+#          key: node-modules-${{ hashFiles('package-lock.json') }}
+#
+#      - name: Install dependencies
+#        run: npm install
+#
+#  test_mysql:
+#    runs-on: ubuntu-latest
+#    needs: setup
+#    steps:
+#      - name: Check out repository code
+#        uses: actions/checkout@v2
+#
+#      - name: Setup node
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: '12'
+#
+#      - name: Restore node_modules
+#        id: cache-node-modules
+#        uses: actions/cache@v2
+#        with:
+#          path: node_modules
+#          key: node-modules-${{ hashFiles('package-lock.json') }}
+#
+#      - name: Test MySQL 5
+#        run: npm run test-mysql
+#        env:
+#          DOCKER_MYSQL_TAG: 5
+#
+#      - name: Test MySQL 8
+#        run: npm run test-mysql
+#        env:
+#          DOCKER_MYSQL_TAG: 8
+#
+#
+#  publish:
+#    runs-on: ubuntu-latest
+#    needs: [test_mysql, test_postgres, test_mariadb, test_mssql, test_sqlite]
+#    steps:
+#      - name: Check out repository code
+#        uses: actions/checkout@v2
+#
+#      - name: Setup node
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: '12'
+#
+#      - name: Restore node_modules
+#        id: cache-node-modules
+#        uses: actions/cache@v2
+#        with:
+#          path: node_modules
+#          key: node-modules-${{ hashFiles('package-lock.json') }}
+#
+#      - name: Build
+#        run: npm run build
+#
+#      - name: Check version changes
+#        uses: EndBug/version-check@v1
+#        id: check
+#
+#      - name: Publish
+#        if: steps.check.outputs.changed == 'true' && github.ref == 'refs/heads/master'
+#        run: |
+#          npm set registry "https://registry.npmjs.org"
+#          npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_PUBLISH_TOKEN }}
+#          npm publish
