--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -70,17 +70,19 @@ jobs:
     name: Security Scan
     needs: test
     runs-on: ubuntu-latest
+    environment:
+      name: common
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Run SAST scan
+      - name: SAST scan
         uses: AppThreat/sast-scan-action@v1.0.0
         with:
           type: nodejs
 
-      - name: Run SCA scan
+      - name: SCA scan
         uses: snyk/actions/node@master
         continue-on-error: true
         with:
