--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -80,10 +80,10 @@ jobs:
           path: node_modules
           key: node-modules-${{ hashFiles('package-lock.json') }}
 
-      - name: SAST scan
-        uses: AppThreat/sast-scan-action@v1.0.0
+      - name: SAST Scan
+        uses: ShiftLeftSecurity/scan-action@master
         with:
-          type: nodejs
+          type: 'nodejs'
 
       - name: SCA scan
         uses: snyk/actions/node@master
@@ -111,12 +111,12 @@ jobs:
           echo "Running production build..."
           npm run build:prod
 
-#      - name: Upload artifacts
-#        uses: jfrog/setup-jfrog-cli@v2
-#        env:
-#          JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
-#        run: |
-#          jf c use dev-server
-#          jf rt ping
+      - name: Upload artifacts
+        uses: jfrog/setup-jfrog-cli@v2
+        env:
+          JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
+        run: |
+          jf c use dev-server
+          jf rt ping
 
 
