commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -111,12 +111,12 @@ jobs:
           echo "Running production build..."
           npm run build:prod
 
-      - name: Upload artifacts
-        uses: jfrog/setup-jfrog-cli@v2
-        env:
-          JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
-        run: |
-          jf c use dev-server
-          jf rt ping
+#      - name: Upload artifacts
+#        uses: jfrog/setup-jfrog-cli@v2
+#        env:
+#          JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
+#        run: |
+#          jf c use dev-server
+#          jf rt ping
 
 
