commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -117,16 +117,13 @@ jobs:
           echo "Running production build..."
           npm run build:prod
 
-          sh "pwd"
-          sh "ls"
-
-      - name: Upload artifacts
-        uses: jfrog/setup-jfrog-cli@v2
-        env:
-          JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
-      - run: |
-          jf c use dev-server
-          jf rt ping
-          jf ru
+#      - name: Upload artifacts
+#        uses: jfrog/setup-jfrog-cli@v2
+#        env:
+#          JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
+#      - run: |
+#          jf c use dev-server
+#          jf rt ping
+#          jf ru
 
 
