commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -86,7 +86,7 @@ jobs:
 
   publish:
     name: Publish Artifacts
-    needs: security
+    needs: build
     runs-on: ubuntu-latest
     environment:
       name: dev
