commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -119,6 +119,6 @@ jobs:
       - run: |
           jf c add --url https://ahamedartifactory.jfrog.io/artifactory
           jf rt ping
-          jf ru build my-job-portal-ui-generic-local/
+          jf rt upload build my-job-portal-ui-generic-local/
 
 
