--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -117,8 +117,8 @@ jobs:
         with:
           JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
       - run: |
-          jf c add --url https://ahamedartifactory.jfrog.io/artifactory
-          echo ${{ secrets.JFROG_ARTIFACTORY_URL }}
+          jf c add --url ${{ secrets.JFROG_ARTIFACTORY_URL }}
+#          echo ${{ secrets.JFROG_ARTIFACTORY_URL }}
           echo "URL: ${secrets.JFROG_ARTIFACTORY_URL}"
           sudo touch newfile.txt
           jf rt upload --newfile.txt my-job-portal-ui-generic-local/
