--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -115,11 +115,13 @@ jobs:
       - name: Upload artifacts
         uses: jfrog/setup-jfrog-cli@v2
         with:
-          JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
+          JFROG_TOKEN: "hello"
       - run: |
-          jf c add --url ${{ secrets.JFROG_ARTIFACTORY_URL }}
-          echo "URL: ${secrets.JFROG_ARTIFACTORY_URL}"
-          sudo touch newfile.txt
-          jf rt upload --newfile.txt my-job-portal-ui-generic-local/
+          echo "$JFROG_TOKEN"
+#          jf c add --url ${{ secrets.JFROG_ARTIFACTORY_URL }}
+#          echo ${{ secrets.JFROG_ARTIFACTORY_URL }}
+#          echo "URL: ${secrets.JFROG_ARTIFACTORY_URL}"
+#          sudo touch newfile.txt
+#          jf rt upload --newfile.txt my-job-portal-ui-generic-local/
 
 
