commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -114,12 +114,11 @@ jobs:
 
       - name: Upload artifacts
         uses: jfrog/setup-jfrog-cli@v2
-
-      - name: Upload
-        with:
+        env:
           JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
-        run: |
-          jf c add --url https://ahamedrepo.jfrog.io/artifactory/ --password "$JFROG_TOKEN"
+
+      - run: |
+          jf c add --url https://ahamedrepo.jfrog.io/artifactory/ --password $JFROG_TOKEN
           jf rt ping
 #          jf c add --url ${{ secrets.JFROG_ARTIFACTORY_URL }}
 #          echo ${{ secrets.JFROG_ARTIFACTORY_URL }}
