--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -116,8 +116,7 @@ jobs:
         uses: jfrog/setup-jfrog-cli@v2
         env:
           JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
-
-      - run: |
+        run: |
           jf c add --url https://ahamedrepo.jfrog.io/artifactory/ --password $JFROG_TOKEN
           jf rt ping
 #          jf c add --url ${{ secrets.JFROG_ARTIFACTORY_URL }}
