commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -116,8 +116,9 @@ jobs:
         uses: jfrog/setup-jfrog-cli@v2
         env:
           JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
-        run: |
-          jf c add --url https://ahamedrepo.jfrog.io/artifactory/ --password $JFROG_TOKEN
+
+      - run: |
+          jf c add --url https://ahamedrepo.jfrog.io/artifactory/ --password "${{ secrets.JFROG_TOKEN }}"
           jf rt ping
 #          jf c add --url ${{ secrets.JFROG_ARTIFACTORY_URL }}
 #          echo ${{ secrets.JFROG_ARTIFACTORY_URL }}
