--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -118,7 +118,7 @@ jobs:
           JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
 
       - run: |
-          jf c add --url https://ahamedrepo.jfrog.io/artifactory/ --password "${{ secrets.JFROG_TOKEN }}"
+          jf c add --url https://ahamedrepo.jfrog.io/artifactory/ --password "$JFROG_TOKEN"
           jf rt ping
 #          jf c add --url ${{ secrets.JFROG_ARTIFACTORY_URL }}
 #          echo ${{ secrets.JFROG_ARTIFACTORY_URL }}
