commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -118,12 +118,13 @@ jobs:
           JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
 
       - run: |
-          jf c add --url https://ahamedrepo.jfrog.io/artifactory/ --password "$JFROG_TOKEN"
           jf rt ping
-#          jf c add --url ${{ secrets.JFROG_ARTIFACTORY_URL }}
-#          echo ${{ secrets.JFROG_ARTIFACTORY_URL }}
-#          echo "URL: ${secrets.JFROG_ARTIFACTORY_URL}"
-#          sudo touch newfile.txt
-#          jf rt upload --newfile.txt my-job-portal-ui-generic-local/
+#          jf c add --url https://ahamedrepo.jfrog.io/artifactory/ --password "$JFROG_TOKEN"
+#          jf rt ping
+##          jf c add --url ${{ secrets.JFROG_ARTIFACTORY_URL }}
+##          echo ${{ secrets.JFROG_ARTIFACTORY_URL }}
+##          echo "URL: ${secrets.JFROG_ARTIFACTORY_URL}"
+##          sudo touch newfile.txt
+##          jf rt upload --newfile.txt my-job-portal-ui-generic-local/
 
 
