commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -118,6 +118,7 @@ jobs:
           JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
 
       - run: |
+          jf c use local-1
           jf rt ping
 #          jf c add --url https://ahamedrepo.jfrog.io/artifactory/ --password "$JFROG_TOKEN"
 #          jf rt ping
