commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -119,6 +119,8 @@ jobs:
 
       - run: |
           jf rt ping --url https://ahamedrepo.jfrog.io/artifactory/
+          sudo touch newfile.txt
+          jf rt upload newfile.txt my-job-portal-ui-generic-local/
 #          jf c add --url https://ahamedrepo.jfrog.io/artifactory/ --password "$JFROG_TOKEN"
 #          jf rt ping
 ##          jf c add --url ${{ secrets.JFROG_ARTIFACTORY_URL }}
