commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -7,6 +7,10 @@ on:
 
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: '../'
+
 jobs:
   build:
     name: Build
@@ -121,24 +125,4 @@ jobs:
           credentials type: 'accesstoken'
           access token: ${{ secrets.JFROG_TOKEN }}
           args: upload "newfile.txt" "my-job-portal-fe-generic-local/" --fail-no-op=true
-
-#      - name: Upload artifacts
-#        uses: jfrog/setup-jfrog-cli@v2
-#        env:
-#          JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
-
-#      - run: |
-#          jf config add --url=https://ahamedrepo.jfrog.io/artifactory/ artifactory-server-id
-#          jf rt ping
-#          sudo touch newfile.txt
-#          jf config show
-#          jf rt upload --url=https://ahamedrepo.jfrog.io/artifactory/ --access-token="$JFROG_TOKEN" newfile.txt my-job-portal-ui-generic-local/
-#          jf c add --url https://ahamedrepo.jfrog.io/artifactory/ --password "$JFROG_TOKEN"
-#          jf rt ping
-##          jf c add --url ${{ secrets.JFROG_ARTIFACTORY_URL }}
-##          echo ${{ secrets.JFROG_ARTIFACTORY_URL }}
-##          echo "URL: ${secrets.JFROG_ARTIFACTORY_URL}"
-##          sudo touch newfile.txt
-##          jf rt upload --newfile.txt my-job-portal-ui-generic-local/
-
 
