--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -36,6 +36,16 @@ jobs:
           path: node_modules
           key: node-modules-${{ hashFiles('package-lock.json') }}
 
+      - uses: jitterbit/get-changed-files@v1
+        id: abc
+
+      - name: Create artifacts
+        run: |
+          echo "Running production build..."
+          npm run build:prod
+          touch newfile.txt
+          echo "${{ steps.abc.outputs.all }}"
+
       - name: Install dependencies
         run: npm ci
 
