commit github action workflow

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -44,6 +44,7 @@ jobs:
           echo "Running production build..."
           pwd
           ls
+          cd my-job-portal
           touch newfile.txt
           echo "${{ steps.abc.outputs.all }}"
 
