--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -129,5 +129,5 @@ jobs:
           url: 'https://ahamedrepo.jfrog.io/artifactory/'
           credentials type: 'accesstoken'
           access token: ${{ secrets.JFROG_TOKEN }}
-          args: upload "build/*" "my-job-portal-fe-generic-local/" --fail-no-op=true
+          args: upload "build.zip" "my-job-portal-fe-generic-local/" --fail-no-op=true
 
