--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -47,7 +47,7 @@ jobs:
 
       - uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r "${github.run_id}.zip" build
+          args: zip -qq -r "${{ github.run_id }}.zip" build
 
       - name: Static analysis
         run: |
